--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -67,6 +67,7 @@ jobs:
     #   make release
     
     - name: Execute build.bat
+      shell: cmd
       run: build.bat
       working-directory: .
 
