Skip batch file and execute ps1 script

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -68,7 +68,7 @@ jobs:
     
     - name: Execute build.bat
       shell: pwsh
-      run: .\build.bat
+      run: .\build\build.ps1
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
