--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,8 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
-    - run: msbuild src\umbraco.sln
+    - run: msbuild umbraco.sln
+      working-directory: .\src
     
     # This doesn't work
     #- name: Execute build.bat
