--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,8 +65,14 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
-    - run: msbuild umbraco.sln
-      working-directory: src
+    - uses: nuget/setup-nuget@v1
+      with:
+        nuget-version: '5.x'
+        
+    - working-directory: src
+      run: |
+        nuget restore umbraco.sln
+        msbuild umbraco.sln      
     
     # This doesn't work
     #- name: Execute build.bat
